Fix contrast and forms

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a class="navbar-item logo-link">
-              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
+            <a class="navbar-item logo-link" title='go to main page' >
+              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt='this is a logo image'>
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
@@ -183,9 +183,9 @@
       <h5 class="is-5 title">Fifth level</h5>
       <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
       <figure aria-labelledby="caption">
-        <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg" alt="full alternative image description">
-        <img src="./img/photo-1574281852611-b2f04c86a520.jpg" alt="full alternative image description">
-        <img src="./img/photo-1575023615386-1554d895d09d.jpg" alt="full alternative image description">
+        <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg" alt="full alternative image description 1">
+        <img src="./img/photo-1574281852611-b2f04c86a520.jpg" alt="full alternative image description 2">
+        <img src="./img/photo-1575023615386-1554d895d09d.jpg" alt="full alternative image description 3">
         <figcaption>
           Figure 1: Some beautiful placeholders
         </figcaption>
@@ -291,7 +291,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1">
+                  <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1" alt='image 1 description'>
                 </div>
               </div>
               <div class="card-content">
@@ -307,7 +307,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-2.jpg">
+                  <img src="./img/tab-2.jpg" alt='image 2 description'>
                 </div>
               </div>
               <div class="card-content">
@@ -324,7 +324,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2">
+                  <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2" alt='image 3 description'>
                 </div>
               </div>
               <div class="card-content">
@@ -434,7 +434,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg" alt="full alternative image description">
+              <img src="./img/access.jpg" alt="full alternative image description 2">
             </div>
             <p class="title">Los Angeles</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -444,7 +444,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/dotcss-2019.jpg" alt="full alternative image description">
+              <img src="./img/dotcss-2019.jpg" alt="full alternative image description 3">
             </div>
             <p class="title">Mexico</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -457,7 +457,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/images.jpg" alt="full alternative image description">
+              <img src="./img/images.jpg" alt="full alternative image description 4">
             </div>
             <p class="title">Paris</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -467,7 +467,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png" alt="full alternative image description">
+              <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png" alt="full alternative image description 5">
             </div>
             <p class="title">Minsk</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -477,7 +477,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg" alt="full alternative image description">
+              <img src="./img/access.jpg" alt="full alternative image description 6">
             </div>
             <p class="title">London</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -560,7 +560,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-1.jpeg" alt="full alternative image description">
+                  <img src="./img/ev-1.jpeg" alt="full alternative image description 5">
                 </div>
               </div>
               <div class="card-footer">
@@ -585,7 +585,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-2.jpeg" alt="full alternative image description">
+                  <img src="./img/ev-2.jpeg" alt="full alternative image description 6">
                 </div>
               </div>
               <div class="card-footer">
@@ -610,7 +610,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-3.jpeg" alt="full alternative image description">
+                  <img src="./img/ev-3.jpeg" alt="full alternative image description 7">
                 </div>
               </div>
               <div class="card-footer">
@@ -637,7 +637,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-4.jpeg" alt="full alternative image description" >
+                  <img src="./img/ev-4.jpeg" alt="full alternative image description 8" >
                 </div>
               </div>
               <div class="card-footer">
@@ -662,7 +662,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-5.jpeg" alt="full alternative image description">
+                  <img src="./img/ev-5.jpeg" alt="full alternative image description 9">
                 </div>
               </div>
               <div class="card-footer">
@@ -687,7 +687,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-6.jpeg" alt="full alternative image description">
+                  <img src="./img/ev-6.jpeg" alt="full alternative image description 9">
                 </div>
               </div>
               <div class="card-footer">
@@ -730,7 +730,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=300" alt="full alternative image description">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=300" alt="full alternative image description 11">
                   </p>
                 </div>
                 <div class="media-content">
@@ -752,7 +752,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=301" alt="full alternative image description">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=301" alt="full alternative image description 12">
                   </p>
                 </div>
                 <div class="media-content">
@@ -774,7 +774,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=302" alt="full alternative image description">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=302" alt="full alternative image description 13">
                   </p>
                 </div>
                 <div class="media-content">
@@ -840,7 +840,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=305" alt="full alternative image description">
+                    <img src="https://source.unsplash.com/random/64x64/?sig=305" alt="full alternative image description 22">
                   </p>
                 </div>
                 <div class="media-content">
@@ -871,89 +871,93 @@
 
       <form class="column is-half is-offset-one-quarter box">
         <div class="field">
-          <label class="label">Name</label>
+          <label class="label" for="name">Name</label>
           <div class="control">
-            <input class="input" type="text" placeholder="Text input">
+            <input id='name' class="input" type="text" aria-describedby="nameNote">placeholder="Text input">
           </div>
+          <span id="nameNote" class='visually-hidden'>Enter here your name</span>
         </div>
 
         <div class="field">
-          <label class="label">Username</label>
+          <label class="label" for="userName">Username</label>
           <div class="control has-icons-left has-icons-right">
-            <input class="input is-success" type="text">
+            <input class="input is-success" type="text" id='userName' aria-describedby="userNameNote">
             <span class="icon is-small is-left">
-              <i class="fas fa-user"></i>
+              <i class="fas fa-user" aria-hidden="true"></i>
             </span>
             <span class="icon is-small is-right">
-              <i class="fas fa-check"></i>
+              <i class="fas fa-check" aria-hidden="true"></i>
             </span>
+            <span id="userNameNote" class='visually-hidden'>Enter here your name</span>
           </div>
           <p class="help is-success">This username is available</p>
         </div>
 
-        <div class="field">
-          <label class="label">Email</label>
+        <fieldset class="field">
+          <label class="label" for='email'>Email</label>
           <div class="control has-icons-left has-icons-right">
-            <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+            <input class="input is-danger" type="email" placeholder="Email input" value="hello@" id='email' aria-describedby="emailNote">
             <span class="icon is-small is-left">
-              <i class="fas fa-envelope"></i>
+              <i class="fas fa-envelope" aria-hidden="true"></i>
             </span>
             <span class="icon is-small is-right">
-              <i class="fas fa-exclamation-triangle"></i>
+              <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
             </span>
+            <span id="emailNote" class='visually-hidden'>Enter here your email</span>
           </div>
           <p class="help is-danger">This email is invalid</p>
-        </div>
+        </fieldset>
 
-        <div class="field">
-          <label class="label">Subject</label>
+        <fieldset class="field">
+          <label class="label" for='subject'>Subject</label>
           <div class="control">
-            <div class="select">
+            <div class="select" id='subject'>
               <select>
                 <option>Select dropdown</option>
                 <option>With options</option>
               </select>
             </div>
           </div>
-        </div>
+        </fieldset>
 
-        <div class="field">
-          <label class="label">Message</label>
+        <fieldset class="field">
+          <label class="label" for='message'>Message</label>
           <div class="control">
-            <textarea class="textarea" placeholder="Textarea"></textarea>
+            <textarea class="textarea" placeholder="Textarea" id='message'></textarea>
           </div>
-        </div>
+        </fieldset>
 
-        <div class="field">
+        <fieldset class="field">
           <div class="control">
-            <label class="checkbox">
-              <input type="checkbox">
+            <label class="checkbox" for='agree'>
+              <input type="checkbox" id='agree'>
               I agree to the <a>terms and conditions</a>
             </label>
           </div>
-        </div>
+        </fieldset>
 
-        <div class="field">
+        <fieldset class="field">
+          <legend>Output format</legend>
           <div class="control">
-            <label class="radio">
-              <input type="radio" name="question">
+            <label class="radio" for='yes'>
+              <input type="radio" name="question" id='yes'>
               Yes
             </label>
-            <label class="radio">
-              <input type="radio" name="question">
+            <label class="radio" for='no'>
+              <input type="radio" name="question" id='no'>
               No
             </label>
           </div>
-        </div>
+        </fieldset>
 
-        <div class="field is-grouped">
+        <fieldsetclass="field is-grouped">
           <div class="control">
             <button class="button is-link">Submit</button>
           </div>
           <div class="control">
             <button class="button is-text">Cancel</button>
           </div>
-        </div>
+        </fieldsetclass>
       </form>
     </div>
   </section>
