--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
       </div>
     </div>
   </header>
+  <!-- breadcrumbs -->
+  <div id="breadcrumbs">
+    <nav class="breadcrumb is-centered is-medium" aria-label="Breadcrumb">
+      <ol>
+        <li>
+          <a href="./">MainPage</a>
+        </li>
+        <li>
+          <a href="index.html#about">About Us</a>
+        </li>
+        <li class="is-active">
+          <a href="index.html#details" aria-current="page">Details</a>
+        </li>
+      </ol>
+    </nav>
+  </div>
 <main>
   <section class="section" id="about">
     <div class="section-heading has-text-centered">
